added a component for displaying elements clicked in the search panel

--- a/public/css/mystyles.css
+++ b/public/css/mystyles.css
@@ -4,7 +4,15 @@
 #DisplayElements{
 
 }
+#CalculationPanel{
 
+}
 .elementFound{
 	border: 1px solid black;
+}
+.elementSelected{
+
+}
+.elementSelected p{
+	text-align: center;
 }
