--- a/public/css/mystyles.css
+++ b/public/css/mystyles.css
@@ -14,5 +14,12 @@
 
 }
 .elementSelected p{
+	margin-bottom: 0;
 	text-align: center;
+}
+.p-m{
+	display: block;
+	margin:auto;
+	padding:0;
+	width: 50%;
 }
