--- a/src/assets/sass/mything.scss
+++ b/src/assets/sass/mything.scss
@@ -52,7 +52,9 @@
 
           .leftParen {
             display: inline-block;
-
+            position: relative;
+            bottom: 15px;
+            
             p {
               margin: 0;
               font-size: 60px;
@@ -65,6 +67,8 @@
 
           .rightParenDiv {
             display: inline-block;
+            position: relative;
+            bottom: 15px;
 
             .rightParen {
               display: inline-block;
@@ -77,6 +81,29 @@
 
             .rightParenPM {
               display: inline-block;
+              position: relative;
+              top: 30px;
+
+              .pp-m {
+                display: block;
+                margin: auto;
+                padding: 0;
+                width: 15px;
+                height: 20px;
+
+                p {
+                  margin-bottom: 0;
+                  text-align: center;
+                }
+              }
+
+              .parenMultiplier {
+
+                p {
+                  margin: 0;
+                  text-align: center;
+                }
+              }
             }
           }
 
