--- a/src/public/allstyles.css
+++ b/src/public/allstyles.css
@@ -14,21 +14,39 @@
       #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton p.inactiveElement {
         color: black; }
   #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .leftParen {
-    display: inline-block; }
+    display: inline-block;
+    position: relative;
+    bottom: 15px; }
     #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .leftParen p {
       margin: 0;
       font-size: 60px; }
   #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemInParen {
     display: inline-block; }
   #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv {
-    display: inline-block; }
+    display: inline-block;
+    position: relative;
+    bottom: 15px; }
     #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParen {
       display: inline-block; }
       #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParen p {
         margin: 0;
         font-size: 60px; }
     #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM {
-      display: inline-block; }
+      display: inline-block;
+      position: relative;
+      top: 30px; }
+      #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM .pp-m {
+        display: block;
+        margin: auto;
+        padding: 0;
+        width: 15px;
+        height: 20px; }
+        #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM .pp-m p {
+          margin-bottom: 0;
+          text-align: center; }
+      #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM .parenMultiplier p {
+        margin: 0;
+        text-align: center; }
   #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected {
     padding: 0 5px 0 5px; }
     #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected .p-m {
