--- a/src/public/allstyles.css
+++ b/src/public/allstyles.css
@@ -1,70 +1,81 @@
-#topApp #bodyRow #leftBody #calculationPanel {
+#nprogress .spinner {
+  top: 50% !important;
+  right: 50% !important; }
+  #nprogress .spinner .spinner-icon {
+    width: 40px !important;
+    height: 40px !important;
+    border-top-color: #0a72f4;
+    border-right-color: yellow;
+    border-bottom-color: red;
+    border-left-color: #0af4be;
+    animation-duration: 500ms;
+    border-width: 4px; }
+
+#app #topApp #bodyRow #leftBody #calculationPanel {
   display: inline-flex; }
-  #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton {
+  #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton {
     display: block;
     border: none;
     background: none; }
-    #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton p {
+    #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton p {
       font-size: 25px;
       margin-bottom: 0; }
-      #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton p sub {
-        font-size: 70px; }
-      #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton p.activeElement {
+      #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton p.activeElement {
         color: red; }
-      #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton p.inactiveElement {
+      #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton p.inactiveElement {
         color: black; }
-  #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .leftParen {
+  #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .leftParen {
     display: inline-block;
     position: relative;
     bottom: 15px; }
-    #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .leftParen p {
+    #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .leftParen p {
       margin: 0;
       font-size: 60px; }
-  #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemInParen {
+  #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemInParen {
     display: inline-block; }
-  #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv {
+  #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv {
     display: inline-block;
     position: relative;
     bottom: 15px; }
-    #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParen {
+    #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParen {
       display: inline-block; }
-      #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParen p {
+      #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParen p {
         margin: 0;
         font-size: 60px; }
-    #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM {
+    #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM {
       display: inline-block;
       position: relative;
       top: 30px; }
-      #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM .pp-m {
+      #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM .pp-m {
         display: block;
         margin: auto;
         padding: 0;
         width: 15px;
         height: 20px; }
-        #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM .pp-m p {
+        #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM .pp-m p {
           margin-bottom: 0;
           text-align: center; }
-      #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM .parenMultiplier p {
+      #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .rightParenDiv .rightParenPM .parenMultiplier p {
         margin: 0;
         text-align: center; }
-  #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected {
+  #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected {
     padding: 0 5px 0 5px; }
-    #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected .p-m {
+    #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected .p-m {
       display: block;
       margin: auto;
       padding: 0;
       width: 20px; }
-      #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected .p-m p {
+      #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected .p-m p {
         margin-bottom: 0;
         text-align: center; }
-    #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected .elemInParenAcronym p {
+    #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elementSelected .elemInParenAcronym p {
       font-size: 25px;
       margin-bottom: 0; }
 
-#topApp #bodyRow #rightBody #elementsPanelRow {
+#app #topApp #bodyRow #rightBody #elementsPanelRow {
   border-left: 1px solid black;
   margin-top: 4px; }
-  #topApp #bodyRow #rightBody #elementsPanelRow .elementFoundButton {
+  #app #topApp #bodyRow #rightBody #elementsPanelRow .elementFoundButton {
     border: 1px solid black;
     border-left: none;
     text-align: center;
