--- a/src/public/allstyles.css
+++ b/src/public/allstyles.css
@@ -11,6 +11,21 @@
     animation-duration: 500ms;
     border-width: 4px; }
 
+#app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineName #accountFormGroupName {
+  display: 'flex';
+  margin-left: 35px; }
+  #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineName #accountFormGroupName p {
+    margin-left: 10px; }
+
+#app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineEmail #accountFormGroupEmail {
+  display: 'flex';
+  margin-left: 35px; }
+  #app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalBody #accountModalRow #accountModalForm #accountFormInlineEmail #accountFormGroupEmail p {
+    margin-left: 10px; }
+
+#app #topApp #headRow #userAccountButtons #accountModal #accountModalDialog #accountModalContent #accountModalFooter p {
+  text-align: center; }
+
 #app #topApp #bodyRow #leftBody #calculationPanel {
   display: inline-flex; }
   #app #topApp #bodyRow #leftBody #calculationPanel .calculatableElement .elemNoParen .elemNoParenButton {
